--- a/ImageProcessingLab2/ImageProcessingLab2.vcxproj.filters
+++ b/ImageProcessingLab2/ImageProcessingLab2.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="src\ImageHistogram\ImageHistogram.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="src\HistogramModifier\LogHistogramModifier.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\MainHeader.hpp">
@@ -33,6 +36,12 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="src\HistogramVisualizer\HistogramVisualizer.hpp">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="src\HistogramModifier\HistogramModifier.hpp">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="src\HistogramModifier\LogHistogramModifier.hpp">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
