Negative almost added

--- a/ImageProcessingLab2/ImageProcessingLab2.vcxproj.filters
+++ b/ImageProcessingLab2/ImageProcessingLab2.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="src\HistogramModifier\LogHistogramModifier.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="src\ImagePreparer\NegativeContrastScalePreparer.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\MainHeader.hpp">
@@ -42,6 +45,12 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="src\HistogramModifier\LogHistogramModifier.hpp">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ImagePreparer\ImagePreparer.hpp">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ImagePreparer\NegativeContrastScalePreparer.hpp">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
