--- a/ImageProcessingLab2/ImageProcessingLab2.vcxproj
+++ b/ImageProcessingLab2/ImageProcessingLab2.vcxproj
@@ -155,6 +155,7 @@
   <ItemGroup>
     <ClCompile Include="src\HistogramModifier\LogHistogramModifier.cpp" />
     <ClCompile Include="src\ImageHistogram\ImageHistogram.cpp" />
+    <ClCompile Include="src\ImagePreparer\NegativeContrastScalePreparer.cpp" />
     <ClCompile Include="src\Main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -164,6 +165,8 @@
     <ClInclude Include="src\ImageHistogram\ImageHistogram.hpp" />
     <ClInclude Include="include\argparse\argparse.hpp" />
     <ClInclude Include="include\MainHeader.hpp" />
+    <ClInclude Include="src\ImagePreparer\ImagePreparer.hpp" />
+    <ClInclude Include="src\ImagePreparer\NegativeContrastScalePreparer.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
